@@ -3467,6 +3467,38 @@ end
 			</seealso>
 		</command>
 	</section>
+	<section title="Zone Functions">
+		<command id="writezone">
+			<canon>write zone (zone id, x, y, value)</canon>
+			<shortname>write zone</shortname>
+			<description>Sets whether the tile at (<p>x,y</p>) is part of the specified zone. <p>zone id</p> is an ID number from 1 to 9999, and <p>value</p> is intrepreted as either <p>true</p> (non-zero) or <p>false</p> (zero).<note>Only up to 15 zones may overlap at each tile. If you try to place 16 zones at one tile, write zone will fail, returning <ref>false</ref>. Normally it returns <ref>true</ref>. If you choose to "Show all warnings" in General Game Settings in Custom, you will also get a warning message.</note></description>
+			<seealso>
+				<ref>readzone</ref>
+			</seealso>
+		</command>
+		<command id="readzone">
+			<canon>read zone (zone id, x, y)</canon>
+			<shortname>read zone</shortname>
+			<description>Returns <ref>true</ref> if the tile at (<p>x,y</p>) is part of the specified zone. <p>zone id</p> is an ID number from 1 to 9999.</description>
+			<seealso>
+				<ref>writezone</ref>
+				<ref>zoneatspot</ref>
+			</seealso>
+		</command>
+		<command id="zoneatspot">
+			<canon>zone at spot (x, y, count)</canon>
+			<shortname>zone at spot</shortname>
+			<description>Used to get the set of all IDs of zones that contain the tile at (<p>x,y</p>). Since zones may overlap, <p>count</p> is used to specify which zone ID to return: 0 is the first, 1 the second, and so on. <p>count</p> may also be the constant <ref>getcount</ref>, in which case the total number of zones which overlap there is returned. If <p>count</p> is too large, 0 (<ref>false</ref>) is returned. <note>The order in which the ID numbers are returned is completely arbitrary.</note></description>
+			<seealso>
+				<ref>readzone</ref>
+			</seealso>
+		</command>
+		<command id="zonenumberoftiles">
+			<canon>zone number of tiles (zone id)</canon>
+			<shortname>zone number of tiles</shortname>
+			<description>Given a <p>zone id</p> (from 1 to 9999), returns the number of tiles that the zone contains.</description>
+		</command>
+	</section>
 	<section title="Misc Functions">
 		<command id="random">
 			<canon>random (lownumber, highnumber)</canon>
@@ -5318,7 +5350,7 @@ end</example>
 		<command id="getcount">
 			<canon>get count</canon>
 			<shortname>get count</shortname>
-			<description>When passed to <ref>npcatpixel</ref>, <ref>npcatspot</ref>, <ref>sliceatpixel</ref> or <ref>childsliceatpixel</ref> they return the number of NPCs or slices at that spot. With <ref>spellslearnt</ref> returns the number of spells a hero learnt. With <ref>findenemyinformation</ref>, returns the number of enemies, or the number of some kind of enemy in the formation.</description>
+			<description>When passed to <ref>npcatpixel</ref>, <ref>npcatspot</ref>, <ref>sliceatpixel</ref>, <ref>findcollidingslice</ref> or <ref>zoneatspot</ref> they return the number of NPCs, slices or zones at that spot. With <ref>spellslearnt</ref> returns the number of spells a hero learnt. With <ref>findenemyinformation</ref>, returns the number of enemies, or the number of some kind of enemy in the formation.</description>
 		</command>
 		<command id="tileconstants">
 			<canon>Tile Constants</canon>
